--- a/Frontend/views/map.html
+++ b/Frontend/views/map.html
@@ -17,8 +17,8 @@
       integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
       crossorigin=""
     />
-    <link defer rel="stylesheet" href="/styles/map.css" />
-    <link defer rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/map.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -53,7 +53,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="home-page" href="/">Home 🏡</a>
+                <a class="nav-link" aria-current="page" href="/">Home 🏡</a>
               </li>
 
               <li class="nav-item">
