Fixed Dark Mode Bug

--- a/Frontend/views/city.html
+++ b/Frontend/views/city.html
@@ -80,7 +80,7 @@
               </li>
             </ul>
             <div
-              class="mx-lg-3 mb-3 mb-lg-0 rounded bg-dark text-light"
+              class="mx-lg-3 mb-3 mb-lg-0 rounded bg-light text-light"
               id="divSwitchDarkMode"
             >
               <div class="form-check form-switch">
