--- a/Frontend/views/dashboard.ejs
+++ b/Frontend/views/dashboard.ejs
@@ -105,7 +105,7 @@
           <% for (const city of favs) { %>
             <div class="card align-items-center p-3 m-3 col-3 bg-light">
               <h2><%= city %></h2>
-              <a class="btn btn-outline-secondary" href= <%= `/city?name=${city}` %> >
+              <a class="btn btn-outline-secondary" href= <%= `/city?name=${city.replace(/ /g,"+")}` %> >
                 More Details
               </a>
             </div>
