--- a/Frontend/views/index.html
+++ b/Frontend/views/index.html
@@ -19,9 +19,12 @@
     />
     <link rel="stylesheet" href="/styles/style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <script src="/json/meta.json"></script>
   </head>
@@ -65,10 +68,7 @@
               </li>
 
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  aria-current="page"
-                  href="/dashboard"
+                <a class="nav-link" aria-current="page" href="/dashboard"
                   >Personal Dashboard 💛</a
                 >
               </li>
@@ -105,31 +105,31 @@
     </header>
 
     <main>
-      <section>
-        <div class="w-100">
-          <form
-            class="d-flex flex-column justify-content-center align-items-center gap-2"
-            action="/city"
-            method="GET"
-          >
-            <input
-              id="search-bar"
-              class="form-control m-1 w-50 text-center"
-              type="search"
-              name="name"
-              placeholder="Search a city"
-              aria-label="Search a city"
-              required
-            />
-            <button class="btn btn-outline-secondary mb-2" type="submit">
-              Search 🔎
-            </button>
-          </form>
-        </div>
-      </section>
+      <div class="w-100">
+        <form
+          class="d-flex flex-column justify-content-center align-items-center gap-2"
+          action="/city"
+          method="GET"
+        >
+          <input
+            id="search-bar"
+            class="form-control m-1 w-50 text-center"
+            type="search"
+            name="name"
+            placeholder="Search a city"
+            aria-label="Search a city"
+            required
+          />
+          <button class="btn btn-outline-secondary mb-2" type="submit">
+            Search 🔎
+          </button>
+        </form>
+      </div>
 
       <div class="row">
-        <div class="d-flex flex-column align-items-center col-lg-6 justify-content-center">
+        <div
+          class="d-flex flex-column align-items-center col-lg-6 justify-content-center"
+        >
           <h3>Current Location</h3>
           <p id="name-current-location">Non Disponibile</p>
           <p id="temp-current-location">Non Disponibile</p>
@@ -162,48 +162,54 @@
               aria-label="Slide 3"
             ></button>
           </div>
-  
+
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                data-src="https://static.open.online/wp-content/uploads/2020/03/MILANO-TAG.jpg"
+                src="https://static.open.online/wp-content/uploads/2020/03/MILANO-TAG.jpg"
                 class="d-block img-fluid carousel-img rounded-3"
                 alt="Milano Picture"
               />
               <div class="carousel-caption rounded bg-opacity-75 bg-white p-3">
                 <h5>Milano</h5>
                 <p id="temp-Milan-car"></p>
-                <a href="/city?name=Milano" class="btn btn-secondary">More Details</a>
+                <a href="/city?name=Milano" class="btn btn-secondary"
+                  >More Details</a
+                >
               </div>
             </div>
-  
+
             <div class="carousel-item">
               <img
-                data-src="https://images.unsplash.com/photo-1527048272542-01226422db13?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1495&q=80"
+                src="https://images.unsplash.com/photo-1527048272542-01226422db13?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1495&q=80"
                 class="d-block img-fluid carousel-img rounded-3"
                 alt="Sidney Picture"
               />
               <div class="carousel-caption rounded bg-opacity-75 bg-white p-3">
                 <h5>Sidney</h5>
                 <p id="temp-Sidney-car"></p>
-                <a href="/city?name=Sidney" class="btn btn-secondary">More Details</a>
+                <a href="/city?name=Sidney" class="btn btn-secondary"
+                  >More Details</a
+                >
               </div>
             </div>
-  
+
             <div class="carousel-item">
               <img
-                data-src="https://images.unsplash.com/photo-1513635269975-59663e0ac1ad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                src="https://images.unsplash.com/photo-1513635269975-59663e0ac1ad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 class="d-block img-fluid carousel-img rounded-3"
                 alt="Londra Picture"
               />
               <div class="carousel-caption rounded bg-opacity-75 bg-white p-3">
                 <h5>Londra</h5>
                 <p id="temp-London-car"></p>
-                <a href="/city?name=Londra" class="btn btn-secondary">More Details</a>
+                <a href="/city?name=Londra" class="btn btn-secondary"
+                  >More Details</a
+                >
               </div>
             </div>
           </div>
-  
+
           <button
             class="carousel-control-prev"
             type="button"
@@ -213,7 +219,7 @@
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-  
+
           <button
             class="carousel-control-next"
             type="button"
@@ -225,10 +231,9 @@
           </button>
         </div>
       </div>
-
     </main>
 
-    <hr class="rounded">
+    <hr class="rounded" />
 
     <footer class="text-center bg-light">
       <h4>Peaceful Weather</h4>
